--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ avatar_image: /img/portfolio_pic_sq.jpg
 #-------------------------------
 # Contact links
 linkedln: "https://www.linkedin.com/in/steve-solnosky-data27/?trk=opento_sprofile_topcard" # Add your linkedln handle
-github: "https://github.com/#"  # Add your github handle
+github: "https://github.com/stevepark27"  # Add your github handle
 
 paginate: 6
 paginate_path: "/page/:num"
@@ -51,6 +51,7 @@ defaults:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+
 
 
 
